--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,html}\""
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,html}\"",
+    "test": "vitest"
   },
   "dependencies": {
     "oidc-client-ts": "^2.4.0",
@@ -29,6 +30,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vitest": "^1.5.0"
   }
 }
