Add configurable backend ServiceMonitor path

--- a/ops/helm/app-chart/templates/backend-servicemonitor.yaml
+++ b/ops/helm/app-chart/templates/backend-servicemonitor.yaml
@@ -22,6 +22,7 @@ spec:
       {{- include "app-chart.selectorLabels" (list . "backend") | nindent 6 }}
   endpoints:
     - port: {{ .Values.backend.monitoring.serviceMonitor.port | default "http" }}
+      path: {{ .Values.backend.monitoring.serviceMonitor.path | default "/actuator/prometheus" }}
       {{- with .Values.backend.monitoring.serviceMonitor.interval }}
       interval: {{ . }}
       {{- end }}
