--- a/ops/helm/app-chart/values.yaml
+++ b/ops/helm/app-chart/values.yaml
@@ -66,6 +66,7 @@ backend:
     serviceMonitor:
       enabled: false
       port: http
+      path: /actuator/prometheus
       interval: ""
       scrapeTimeout: ""
       labels: {}
