--- a/config-repo/environments/des/values.yaml
+++ b/config-repo/environments/des/values.yaml
@@ -15,6 +15,9 @@ keycloak:
   baseUrl: https://sso.des.company.internal
   realm: app-des
   clientId: app-client
+  issuerUri: https://sso.des.company.internal/realms/app-des
+  audience: ""
+  jwkSetUri: ""
   callbackUrl: https://app.des.company.internal/oauth/callback
 env:
   name: des
@@ -23,8 +26,10 @@ env:
   variables:
     - name: APP_ENV
       value: des
-    - name: KEYCLOAK_REALM
-      value: app-des
+    - name: KC_ISSUER_URI
+      value: https://sso.des.company.internal/realms/app-des
+    - name: KC_CLIENT_ID
+      value: app-client
 monitoring:
   enabled: true
   serviceMonitor:
