--- a/config-repo/environments/hom/values.yaml
+++ b/config-repo/environments/hom/values.yaml
@@ -15,6 +15,9 @@ keycloak:
   baseUrl: https://sso.hom.company.internal
   realm: app-hom
   clientId: app-client
+  issuerUri: https://sso.hom.company.internal/realms/app-hom
+  audience: ""
+  jwkSetUri: ""
   callbackUrl: https://app.hom.company.internal/oauth/callback
 env:
   name: hom
@@ -23,8 +26,10 @@ env:
   variables:
     - name: APP_ENV
       value: hom
-    - name: KEYCLOAK_REALM
-      value: app-hom
+    - name: KC_ISSUER_URI
+      value: https://sso.hom.company.internal/realms/app-hom
+    - name: KC_CLIENT_ID
+      value: app-client
 monitoring:
   enabled: true
   serviceMonitor:
