--- a/config-repo/environments/local/values.yaml
+++ b/config-repo/environments/local/values.yaml
@@ -15,6 +15,9 @@ keycloak:
   baseUrl: https://sso.local.test
   realm: app
   clientId: app-client
+  issuerUri: https://sso.local.test/realms/app
+  audience: ""
+  jwkSetUri: ""
   callbackUrl: https://app.local.test/oauth/callback
 env:
   name: local
@@ -23,8 +26,10 @@ env:
   variables:
     - name: APP_ENV
       value: local
-    - name: KEYCLOAK_REALM
-      value: app
+    - name: KC_ISSUER_URI
+      value: https://sso.local.test/realms/app
+    - name: KC_CLIENT_ID
+      value: app-client
 monitoring:
   enabled: false
   serviceMonitor:
