--- a/ops/helm/app-chart/templates/backend-deployment.yaml
+++ b/ops/helm/app-chart/templates/backend-deployment.yaml
@@ -50,12 +50,18 @@ spec:
             {{- toYaml . | nindent 12 }}
             {{- end }}
             {{- if .Values.backend.keycloak.enabled }}
-            - name: KEYCLOAK_BASE_URL
-              value: {{ .Values.backend.keycloak.baseUrl | quote }}
-            - name: KEYCLOAK_REALM
-              value: {{ .Values.backend.keycloak.realm | quote }}
-            - name: KEYCLOAK_CLIENT_ID
+            - name: KC_ISSUER_URI
+              value: {{ .Values.backend.keycloak.issuerUri | quote }}
+            - name: KC_CLIENT_ID
               value: {{ .Values.backend.keycloak.clientId | quote }}
+            {{- with .Values.backend.keycloak.audience }}
+            - name: KC_AUDIENCE
+              value: {{ . | quote }}
+            {{- end }}
+            {{- with .Values.backend.keycloak.jwkSetUri }}
+            - name: KC_JWK_SET_URI
+              value: {{ . | quote }}
+            {{- end }}
             {{- end }}
           {{- end }}
           {{- with .Values.backend.envFrom }}
