--- a/config-repo/environments/local/values.yaml
+++ b/config-repo/environments/local/values.yaml
@@ -1,38 +1,37 @@
-images:
-  backend:
+global:
+  namespace: app-local
+
+ingress:
+  enabled: true
+  className: nginx
+  hosts:
+    - host: app.local.test
+      paths:
+        - path: /
+          pathType: Prefix
+          service:
+            component: frontend
+            port: 80
+  tls: []
+
+backend:
+  image:
     repository: ghcr.io/company/app-backend
     tag: local
-  frontend:
-    repository: ghcr.io/company/app-frontend
-    tag: local
-ingress:
-  className: nginx
-  host: app.local.test
-  tls:
-    enabled: false
-    secretName: ""
-keycloak:
-  baseUrl: https://sso.local.test
-  realm: app
-  clientId: app-client
-  issuerUri: https://sso.local.test/realms/app
-  audience: ""
-  jwkSetUri: ""
-  callbackUrl: https://app.local.test/oauth/callback
-env:
-  name: local
-  namespace: app-local
-  fqdn: app.local.test
-  variables:
+  keycloak:
+    enabled: true
+    baseUrl: https://sso.local.test
+    realm: app
+    clientId: app-client
+    issuerUri: https://sso.local.test/realms/app
+    audience: ""
+    jwkSetUri: ""
+    callbackUrl: https://app.local.test/oauth/callback
+  env:
     - name: APP_ENV
       value: local
-    - name: KC_ISSUER_URI
-      value: https://sso.local.test/realms/app
-    - name: KC_CLIENT_ID
-      value: app-client
-monitoring:
-  enabled: false
-  serviceMonitor:
-    namespace: monitoring
-    labels:
-      release: kube-prometheus-stack
+
+frontend:
+  image:
+    repository: ghcr.io/company/app-frontend
+    tag: local
