--- a/ops/helm/app-chart/templates/frontend-deployment.yaml
+++ b/ops/helm/app-chart/templates/frontend-deployment.yaml
@@ -54,7 +54,7 @@ spec:
           {{- end }}
           {{- with .Values.frontend.env }}
           env:
-            {{- toYaml . | nindent 12 }}
+            {{- (tpl (toYaml .) $) | nindent 12 }}
           {{- end }}
           {{- with .Values.frontend.envFrom }}
           envFrom:
