Add local Keycloak setup for docker compose

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Shared ports
 POSTGRES_PORT=5432
-BACKEND_PORT=8080
+BACKEND_PORT=8081
 FRONTEND_PORT=5173
 
 # PostgreSQL configuration
@@ -13,19 +13,23 @@ DB_URL=jdbc:postgresql://postgres:5432/backend
 DB_USERNAME=backend
 DB_PASSWORD=backend
 
+# Keycloak container bootstrap
+KEYCLOAK_ADMIN=admin
+KEYCLOAK_ADMIN_PASSWORD=admin
+
 # Keycloak / OIDC settings shared by backend and frontend
-KC_ISSUER_URI=https://sso-des.nuvem.unicamp.br/realms/app
+KC_ISSUER_URI=http://keycloak:8080/realms/app-local
 KC_CLIENT_ID=app-frontend
 KC_AUDIENCE=app-backend
 KC_ALLOWED_ORIGINS=http://localhost:5173
 KC_ALLOWED_METHODS=GET,POST,PUT,DELETE
 KC_ALLOWED_HEADERS=Authorization,Content-Type
 # Optional overrides when the JWKs endpoint does not follow the default pattern
-# KC_JWK_SET_URI=https://sso-des.nuvem.unicamp.br/realms/app/protocol/openid-connect/certs
-# KC_CLIENT_SECRET=replace-me-when-running-secured-flows
+# KC_JWK_SET_URI=http://keycloak:8080/realms/app-local/protocol/openid-connect/certs
+# KC_CLIENT_SECRET=backend-secret
 
 # Vite runtime overrides (available to `import.meta.env`)
-VITE_OIDC_AUTHORITY=https://sso-des.nuvem.unicamp.br/realms/app
+VITE_OIDC_AUTHORITY=http://keycloak:8080/realms/app-local
 VITE_OIDC_CLIENT_ID=app-frontend
 VITE_OIDC_REDIRECT_URI=http://localhost:5173/callback
 VITE_OIDC_SILENT_REDIRECT_URI=http://localhost:5173/silent-renew
