--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,10 @@ stages:
   - update-config-repo
 
 variables:
-  HARBOR_REGISTRY: "harbor.example.com/project"
-  IMAGE_TAG: "v${CI_COMMIT_TAG:-0.0.0}-${CI_COMMIT_SHORT_SHA}"
+  HARBOR_REGISTRY: "registry.nuvem.unicamp.br/project/app"
+  IMAGE_TAG: "${CI_COMMIT_SHA}"
   MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end -Dmaven.repo.local=.m2/repository"
+  CONFIG_REPO_PATH: "/tmp/config-repo"
 
 backend:build:
   stage: build
@@ -77,7 +78,7 @@ frontend:test:
     - cd apps/frontend
     - npm test -- --ci --watch=false
 
-frontend:package:
+frontend:package:dev:
   stage: package
   image: node:20
   cache:
@@ -89,91 +90,188 @@ frontend:package:
     - frontend:test
   script:
     - cd apps/frontend
+    - cp .env.dev .env
     - npm run build
   artifacts:
     expire_in: 1 week
     paths:
       - apps/frontend/dist
+  only:
+    - develop
 
-build-and-push-images:
+frontend:package:hom:
+  stage: package
+  image: node:20
+  cache:
+    key: "frontend-${CI_PROJECT_NAME}"
+    paths:
+      - apps/frontend/node_modules/
+    policy: pull-push
+  needs:
+    - frontend:test
+  script:
+    - cd apps/frontend
+    - cp .env.hom .env
+    - npm run build
+  artifacts:
+    expire_in: 1 week
+    paths:
+      - apps/frontend/dist
+  only:
+    - hom
+
+frontend:package:prod:
+  stage: package
+  image: node:20
+  cache:
+    key: "frontend-${CI_PROJECT_NAME}"
+    paths:
+      - apps/frontend/node_modules/
+    policy: pull-push
+  needs:
+    - frontend:test
+  script:
+    - cd apps/frontend
+    - cp .env.prod .env
+    - npm run build
+  artifacts:
+    expire_in: 1 week
+    paths:
+      - apps/frontend/dist
+  only:
+    - main
+
+build-and-push-images:dev:
   stage: push
-  image: docker:24
-  services:
-    - docker:24-dind
-  variables:
-    DOCKER_HOST: tcp://docker:2375
-    DOCKER_TLS_CERTDIR: ""
+  environment: dev
+  image:
+    name: gcr.io/kaniko-project/executor:debug
+    entrypoint: [""]
   needs:
     - job: backend:package
       artifacts: true
-    - job: frontend:package
+    - job: frontend:package:dev
       artifacts: true
   script:
-    - '[[ -n "$HARBOR_USER" && -n "$HARBOR_PASSWORD" ]] || (echo "HARBOR_USER/HARBOR_PASSWORD must be set" >&2; exit 1)'
-    - echo "$HARBOR_PASSWORD" | docker login -u "$HARBOR_USER" --password-stdin "$HARBOR_REGISTRY"
-    - docker build -t "$HARBOR_REGISTRY/app-backend:${IMAGE_TAG}" -f apps/backend/Dockerfile apps/backend
-    - docker push "$HARBOR_REGISTRY/app-backend:${IMAGE_TAG}"
-    - docker build -t "$HARBOR_REGISTRY/app-frontend:${IMAGE_TAG}" -f apps/frontend/Dockerfile apps/frontend
-    - docker push "$HARBOR_REGISTRY/app-frontend:${IMAGE_TAG}"
+    - mkdir -p /kaniko/.docker
+    - echo '{"auths":{"'${HARBOR_REGISTRY}'":{"username":"'${HARBOR_USER}'","password":"'${HARBOR_PASSWORD}'"}}}' > /kaniko/.docker/config.json
+    - /kaniko/executor --context ${CI_PROJECT_DIR}/apps/backend --dockerfile ${CI_PROJECT_DIR}/apps/backend/Dockerfile --destination ${HARBOR_REGISTRY}/app-backend:${IMAGE_TAG}
+    - /kaniko/executor --context ${CI_PROJECT_DIR}/apps/frontend --dockerfile ${CI_PROJECT_DIR}/apps/frontend/Dockerfile --destination ${HARBOR_REGISTRY}/app-frontend:${IMAGE_TAG}
+  only:
+    - develop
 
-update-config-repo:
+build-and-push-images:hom:
+  stage: push
+  environment: hom
+  image:
+    name: gcr.io/kaniko-project/executor:debug
+    entrypoint: [""]
+  needs:
+    - job: backend:package
+      artifacts: true
+    - job: frontend:package:hom
+      artifacts: true
+  script:
+    - mkdir -p /kaniko/.docker
+    - echo '{"auths":{"'${HARBOR_REGISTRY}'":{"username":"'${HARBOR_USER}'","password":"'${HARBOR_PASSWORD}'"}}}' > /kaniko/.docker/config.json
+    - /kaniko/executor --context ${CI_PROJECT_DIR}/apps/backend --dockerfile ${CI_PROJECT_DIR}/apps/backend/Dockerfile --destination ${HARBOR_REGISTRY}/app-backend:${IMAGE_TAG}
+    - /kaniko/executor --context ${CI_PROJECT_DIR}/apps/frontend --dockerfile ${CI_PROJECT_DIR}/apps/frontend/Dockerfile --destination ${HARBOR_REGISTRY}/app-frontend:${IMAGE_TAG}
+  only:
+    - hom
+
+build-and-push-images:prod:
+  stage: push
+  environment: prod
+  image:
+    name: gcr.io/kaniko-project/executor:debug
+    entrypoint: [""]
+  needs:
+    - job: backend:package
+      artifacts: true
+    - job: frontend:package:prod
+      artifacts: true
+  script:
+    - mkdir -p /kaniko/.docker
+    - echo '{"auths":{"'${HARBOR_REGISTRY}'":{"username":"'${HARBOR_USER}'","password":"'${HARBOR_PASSWORD}'"}}}' > /kaniko/.docker/config.json
+    - /kaniko/executor --context ${CI_PROJECT_DIR}/apps/backend --dockerfile ${CI_PROJECT_DIR}/apps/backend/Dockerfile --destination ${HARBOR_REGISTRY}/app-backend:${IMAGE_TAG}
+    - /kaniko/executor --context ${CI_PROJECT_DIR}/apps/frontend --dockerfile ${CI_PROJECT_DIR}/apps/frontend/Dockerfile --destination ${HARBOR_REGISTRY}/app-frontend:${IMAGE_TAG}
+  only:
+    - main
+
+update-config-repo:dev:
   stage: update-config-repo
-  image: alpine:3.20
+  environment: dev
+  image: alpine:latest
   variables:
     GIT_STRATEGY: none
   needs:
-    - build-and-push-images
+    - build-and-push-images:dev
   before_script:
-    - apk add --no-cache git python3 py3-pip curl
-    - pip install --no-cache-dir ruamel.yaml
+    - apk add --no-cache git yq
   script:
     - '[ -n "$CONFIG_REPO_URL" ] || (echo "CONFIG_REPO_URL must be set" >&2; exit 1)'
-    - git clone "$CONFIG_REPO_URL" config-repo
-    - cd config-repo
-    - export CONFIG_REPO_BRANCH="${CONFIG_REPO_BRANCH:-main}"
-    - git checkout "$CONFIG_REPO_BRANCH"
-    - export UPDATE_BRANCH="update-images-${CI_COMMIT_SHORT_SHA:-${CI_PIPELINE_ID}}"
-    - git checkout -B "$UPDATE_BRANCH"
-    - python3 <<'PY'
-import os
-from pathlib import Path
-from ruamel.yaml import YAML
-
-yaml = YAML()
-image_tag = os.environ.get('IMAGE_TAG')
-repo = os.environ.get('HARBOR_REGISTRY')
-values_dir = Path('environments')
-if not values_dir.exists():
-    raise SystemExit('environments directory not found in config repo')
-for values_file in values_dir.glob('*/values.yaml'):
-    data = yaml.load(values_file.read_text())
-    data.pop('images', None)
-    backend = data.setdefault('backend', {}).setdefault('image', {})
-    frontend = data.setdefault('frontend', {}).setdefault('image', {})
-    backend['repository'] = f"{repo}/app-backend"
-    backend['tag'] = image_tag
-    frontend['repository'] = f"{repo}/app-frontend"
-    frontend['tag'] = image_tag
-    with values_file.open('w') as fh:
-        yaml.dump(data, fh)
-PY
-    - |
-      if git diff --quiet; then
-        echo "No changes to commit"
-        exit 0
-      fi
+    - if [ -d "$CONFIG_REPO_PATH" ]; then rm -rf $CONFIG_REPO_PATH; fi
+    - git clone "$CONFIG_REPO_URL" $CONFIG_REPO_PATH
+    - cd $CONFIG_REPO_PATH
+    - git checkout main
+    - yq eval '.app-backend.image.tag = "'$IMAGE_TAG'"' -i app/values-dev.yaml
+    - yq eval '.app-frontend.image.tag = "'$IMAGE_TAG'"' -i app/values-dev.yaml
     - git config user.name "ci-bot"
     - git config user.email "ci-bot@example.com"
-    - git commit -am "chore: update image tags to ${IMAGE_TAG}"
-    - git push origin "$UPDATE_BRANCH"
-    - |
-      export GITLAB_API_URL="${GITLAB_API_URL:-https://gitlab.com/api/v4}"
-      if [ -n "$GITLAB_TOKEN" ] && [ -n "$CONFIG_REPO_PROJECT_ID" ]; then
-        curl --fail --header "PRIVATE-TOKEN: $GITLAB_TOKEN" \
-          --data-urlencode "source_branch=$UPDATE_BRANCH" \
-          --data-urlencode "target_branch=$CONFIG_REPO_BRANCH" \
-          --data-urlencode "title=chore: update image tags to ${IMAGE_TAG}" \
-          "$GITLAB_API_URL/projects/${CONFIG_REPO_PROJECT_ID}/merge_requests" || echo "Merge request creation skipped"
-      else
-        echo "GITLAB_TOKEN or CONFIG_REPO_PROJECT_ID not set; skipping MR creation"
-      fi
+    - git add app/values-dev.yaml
+    - git commit -m "chore: update dev images to ${IMAGE_TAG}"
+    - git push "$CONFIG_REPO_URL"
+  only:
+    - develop
+
+update-config-repo:hom:
+  stage: update-config-repo
+  environment: hom
+  image: alpine:latest
+  variables:
+    GIT_STRATEGY: none
+  needs:
+    - build-and-push-images:hom
+  before_script:
+    - apk add --no-cache git yq
+  script:
+    - '[ -n "$CONFIG_REPO_URL" ] || (echo "CONFIG_REPO_URL must be set" >&2; exit 1)'
+    - if [ -d "$CONFIG_REPO_PATH" ]; then rm -rf $CONFIG_REPO_PATH; fi
+    - git clone "$CONFIG_REPO_URL" $CONFIG_REPO_PATH
+    - cd $CONFIG_REPO_PATH
+    - git checkout main
+    - yq eval '.app-backend.image.tag = "'$IMAGE_TAG'"' -i app/values-homolog.yaml
+    - yq eval '.app-frontend.image.tag = "'$IMAGE_TAG'"' -i app/values-homolog.yaml
+    - git config user.name "ci-bot"
+    - git config user.email "ci-bot@example.com"
+    - git add app/values-homolog.yaml
+    - git commit -m "chore: update hom images to ${IMAGE_TAG}"
+    - git push "$CONFIG_REPO_URL"
+  only:
+    - hom
+
+update-config-repo:prod:
+  stage: update-config-repo
+  environment: prod
+  image: alpine:latest
+  variables:
+    GIT_STRATEGY: none
+  needs:
+    - build-and-push-images:prod
+  before_script:
+    - apk add --no-cache git yq
+  script:
+    - '[ -n "$CONFIG_REPO_URL" ] || (echo "CONFIG_REPO_URL must be set" >&2; exit 1)'
+    - if [ -d "$CONFIG_REPO_PATH" ]; then rm -rf $CONFIG_REPO_PATH; fi
+    - git clone "$CONFIG_REPO_URL" $CONFIG_REPO_PATH
+    - cd $CONFIG_REPO_PATH
+    - git checkout main
+    - yq eval '.app-backend.image.tag = "'$IMAGE_TAG'"' -i app/values-prod.yaml
+    - yq eval '.app-frontend.image.tag = "'$IMAGE_TAG'"' -i app/values-prod.yaml
+    - git config user.name "ci-bot"
+    - git config user.email "ci-bot@example.com"
+    - git add app/values-prod.yaml
+    - git commit -m "chore: update prod images to ${IMAGE_TAG}"
+    - git push "$CONFIG_REPO_URL"
+  only:
+    - main
