--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,7 +12,8 @@
     "test": "vitest"
   },
   "dependencies": {
-    "oidc-client-ts": "^2.4.0",
+    "@react-keycloak/web": "^3.4.0",
+    "keycloak-js": "^23.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
